argo-rollouts/canary-deployments/portal-app/rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: portal-app-rollout
  namespace: portal-app
spec:
  replicas: 6
  strategy:
    canary:
      steps:
      - setWeight: 25
      - pause: {}
        # - pause: { duration: 30s }
      - setWeight: 50
      - pause: { duration: 60s }
      - setWeight: 100
  selector:
    matchLabels:
      app: portal-app
  template:
    metadata:
      labels:
        app: portal-app
    spec:
      containers:
        - name: portal-app-container
          image: kosaraju333/portal-app:20250422-103136
          ports:
            - containerPort: 3000
