argo-rollouts/canary-deployments/portal-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portal-app-service
  namespace: portal-app
spec:
  selector:
    app: portal-app
  ports:
    - protocol: TCP
      # Below Port number is a service port number
      port: 80
      # Below targetPort is a Container Port number
      targetPort: 3000
